@@ -3,6 +3,8 @@
 	* intprops.h: Sync with GNULIB.
 	* regcomp.c (init_word): Move general_case label inside ifdef.
 	* regex.h: Don't define __USE_GNU. Brings closer to GLIBC regex.
+	* regex.c: Don't include gawkbool.h, we don't use it anymore.
+	* dfa.h: Ditto.
 
 2017-11-26         Arnold D. Robbins     <arnold@skeeve.com>
 
